Initial open API setup, adjusted temporal client setup to be passed in, and changed makefile to get rid of time (#16)
